<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/login_login_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="150dp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/sign_in_activity_text"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_login_to_account_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/sign_in_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/login_login_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="left"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/hints"
        app:hintTextColor="@color/purple_button"
        android:fontFamily="@font/regular"
        android:textColorHighlight="@color/purple_button"
        app:boxStrokeColor="@color/purple_button"

        app:layout_constraintTop_toBottomOf="@id/login_login_to_account_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="left"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/hints"
        app:hintTextColor="@color/purple_button"
        android:fontFamily="@font/regular"
        android:textColorHighlight="@color/purple_button"
        app:boxStrokeColor="@color/purple_button"

        app:layout_constraintTop_toBottomOf="@id/login_email_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_login_button"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:text="@string/log_in"
        android:fontFamily="@font/bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/purple_button_enabled"
        style="@style/Widget.Material3.Button"
        app:backgroundTint="@null"
        android:shadowColor="@color/black"

        android:elevation="10dp"
        android:outlineProvider="bounds"
        android:stateListAnimator="@null"

        app:layout_constraintTop_toBottomOf="@id/login_password_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_signup_textview"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/regular"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:clickable="true"

        app:layout_constraintTop_toBottomOf="@id/login_login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>