<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".fragments.AddBookFragment">

    <TextView
        android:id="@+id/add_book_add_book_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Добавить книгу"
        android:textColor="@color/black"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="60dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_book_title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:hint="@string/title"
        android:textColorHint="@color/hints"
        android:fontFamily="@font/regular"
        android:textColorHighlight="@color/purple_button"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:theme="@style/editTextCustom"

        app:layout_constraintTop_toBottomOf="@id/add_book_add_book_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_book_author_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:hint="@string/author"
        android:textColorHint="@color/hints"
        android:fontFamily="@font/regular"
        android:textColorHighlight="@color/purple_button"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:theme="@style/editTextCustom"

        app:layout_constraintTop_toBottomOf="@id/add_book_title_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_book_genre_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:hint="@string/genre"
        android:textColorHint="@color/hints"
        android:fontFamily="@font/regular"
        android:textColorHighlight="@color/purple_button"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:theme="@style/editTextCustom"

        app:layout_constraintTop_toBottomOf="@id/add_book_author_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_book_add_book_button"
        android:layout_width="330dp"
        android:layout_height="68dp"
        android:text="@string/add_book_button"
        android:fontFamily="@font/bold"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/purple_button_enabled"
        style="@style/Widget.AppCompat.Button"

        app:layout_constraintTop_toBottomOf="@id/add_book_genre_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>