<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <TextView
        android:id="@+id/leave_review_add_review_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leave_review"
        android:textColor="@color/black"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:layout_marginTop="120dp"
        android:textSize="48sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/leave_review_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/leave_review_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:gravity="left"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/hints"
        app:hintTextColor="@color/purple_button"
        android:fontFamily="@font/regular"
        android:textColorHighlight="@color/purple_button"
        app:boxStrokeColor="@color/purple_button"

        app:layout_constraintTop_toBottomOf="@id/leave_review_add_review_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/leave_review_review_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/leave_review_leave_review_button"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:text="@string/send"
        android:fontFamily="@font/bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/purple_button_enabled"
        style="@style/Widget.Material3.Button"
        app:backgroundTint="@null"
        android:shadowColor="@color/black"

        android:elevation="10dp"
        android:outlineProvider="bounds"
        android:stateListAnimator="@null"

        app:layout_constraintTop_toBottomOf="@id/leave_review_review"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>